# results_

./: .gitignore  Dockerfile  app.py  docker-compose.yml  fix_db.py  pyproject.toml  requirements.txt
assets/: style.css
