[tool.poetry]
name = "da-results"
version = "0.1.0"
description = ""
authors = ["Kloym <oleg.petr1223@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
dash = "^4.0.0"
pandas = "^3.0.1"
dash-bootstrap-components = "^2.0.4"
pdfplumber = "^0.11.9"
openpyxl = "^3.1.5"
reportlab = "^4.4.10"
plotly = "^6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
